--- a/Choreograph/Base.lproj/Main.storyboard
+++ b/Choreograph/Base.lproj/Main.storyboard
@@ -16,12 +16,12 @@
         <scene sceneID="iph-em-405">
             <objects>
                 <tableViewController id="VTX-5D-4x5" customClass="DocumentViewController" customModule="Choreograph" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="foI-ZO-gVy">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="foI-ZO-gVy">
                         <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <inset key="scrollIndicatorInsets" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
-                        <slider key="tableHeaderView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" id="1Ol-AH-UEN">
+                        <slider key="tableHeaderView" opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" id="1Ol-AH-UEN">
                             <rect key="frame" x="0.0" y="0.0" width="1112" height="31"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="thumbTintColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -30,63 +30,47 @@
                             </connections>
                         </slider>
                         <toolbar key="tableFooterView" opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.90000000000000002" contentMode="scaleToFill" barStyle="black" id="E7r-9j-bn2">
-                            <rect key="frame" x="0.0" y="103" width="1112" height="44"/>
+                            <rect key="frame" x="0.0" y="119" width="1112" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <items>
-                                <barButtonItem title="Choose Music" id="6LO-57-VaH">
-                                    <color key="tintColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <connections>
-                                        <action selector="chooseMusic:" destination="VTX-5D-4x5" id="4UD-6c-VY7"/>
-                                    </connections>
-                                </barButtonItem>
-                                <barButtonItem style="plain" systemItem="flexibleSpace" id="kXp-u1-ZQs"/>
-                                <barButtonItem tag="1" title="▶️" style="plain" id="MPD-5h-z6w">
-                                    <inset key="largeContentSizeImageInsets" minX="0.0" minY="1" maxX="0.0" maxY="0.0"/>
-                                    <color key="tintColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <connections>
-                                        <action selector="startMusic:" destination="VTX-5D-4x5" id="vTH-BR-B0h"/>
-                                    </connections>
-                                </barButtonItem>
-                                <barButtonItem style="plain" systemItem="flexibleSpace" id="o5u-IJ-4OW"/>
-                                <barButtonItem style="plain" systemItem="flexibleSpace" id="tSd-lW-1dd"/>
                                 <barButtonItem title="Track Title" id="TJz-YP-lwc">
                                     <color key="tintColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </barButtonItem>
                                 <barButtonItem style="plain" systemItem="flexibleSpace" id="CrI-iB-0jq"/>
-                                <barButtonItem title="TrackTime:0.00" id="fub-Xq-bGd">
+                                <barButtonItem title="Track Length: 0:00" id="fub-Xq-bGd">
                                     <color key="tintColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </barButtonItem>
                             </items>
-                            <color key="barTintColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="barTintColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <outlet property="delegate" destination="VTX-5D-4x5" id="PYJ-vO-mLH"/>
                             </connections>
                         </toolbar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChoreographyCell" id="IUn-6i-RLE" customClass="ChoreoCell" customModule="Choreograph" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="59" width="1112" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChoreographyCell" rowHeight="60" id="IUn-6i-RLE" customClass="ChoreoCell" customModule="Choreograph" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="59" width="1112" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" tableViewCell="IUn-6i-RLE" id="Xj2-bV-VJs">
-                                    <rect key="frame" x="0.0" y="0.0" width="1112" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="1112" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ojx-ou-4V3">
-                                            <rect key="frame" x="20" y="0.0" width="100" height="44"/>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" highlighted="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" adjustsFontForContentSizeCategory="YES" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ojx-ou-4V3">
+                                            <rect key="frame" x="20" y="0.0" width="100" height="60.5"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="100" id="qUW-ti-7p9"/>
                                             </constraints>
                                             <nil key="textColor"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences" keyboardType="numbersAndPunctuation"/>
                                             <connections>
                                                 <outlet property="delegate" destination="VTX-5D-4x5" id="dfh-Vq-qRX"/>
                                             </connections>
                                         </textField>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="m5K-AZ-dPa">
-                                            <rect key="frame" x="121" y="0.0" width="1033" height="44"/>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="249" highlighted="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" adjustsFontForContentSizeCategory="YES" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="m5K-AZ-dPa">
+                                            <rect key="frame" x="121" y="0.0" width="1033" height="60.5"/>
                                             <nil key="textColor"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             <connections>
                                                 <outlet property="delegate" destination="VTX-5D-4x5" id="lC8-Fn-RiO"/>
                                             </connections>
@@ -113,7 +97,9 @@
                             <outlet property="delegate" destination="VTX-5D-4x5" id="I5x-Gu-CsV"/>
                         </connections>
                     </tableView>
-                    <toolbarItems/>
+                    <toolbarItems>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="YwM-9Q-JIh"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" id="nHN-rW-Xza">
                         <nil key="title"/>
                         <leftBarButtonItems>
@@ -123,7 +109,18 @@
                                     <action selector="close:" destination="VTX-5D-4x5" id="gfH-ty-cs6"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem title="Track Start Time: 0:00" id="pUn-Vd-VBd">
+                            <barButtonItem title="🎵" id="6LO-57-VaH">
+                                <color key="tintColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="chooseMusic:" destination="VTX-5D-4x5" id="4UD-6c-VY7"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="▶️" id="L42-ql-V4L">
+                                <connections>
+                                    <action selector="startMusic:" destination="VTX-5D-4x5" id="aJr-6I-qdG"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title=" 0:00" id="pUn-Vd-VBd">
                                 <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                             </barButtonItem>
                         </leftBarButtonItems>
@@ -141,7 +138,7 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="playPauseButton" destination="MPD-5h-z6w" id="T4o-bq-iXE"/>
+                        <outlet property="playPauseButton" destination="L42-ql-V4L" id="xGa-P0-nIk"/>
                         <outlet property="startTimeSlider" destination="1Ol-AH-UEN" id="Jvp-vJ-9hp"/>
                         <outlet property="trackInfoLabel" destination="TJz-YP-lwc" id="VKj-2m-s5O"/>
                         <outlet property="trackLengthLabel" destination="fub-Xq-bGd" id="lcY-yC-HqS"/>
@@ -150,7 +147,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gac-eh-gcS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-756" y="-2686"/>
+            <point key="canvasLocation" x="-709" y="-2678"/>
         </scene>
         <!--Print View Controller-->
         <scene sceneID="5sq-bZ-3yo">
@@ -164,20 +161,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ir2-AY-jnL">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ir2-AY-jnL">
                                 <rect key="frame" x="20" y="64" width="1072" height="726"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <attributedString key="attributedText">
-                                    <fragment>
-                                        <string key="content">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                        <attributes>
-                                            <color key="NSBackgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="NSColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
-                                            <font key="NSFont" size="16" name="ArialMT"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" firstLineHeadIndent="5" headIndent="5" defaultTabInterval="60" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
@@ -213,7 +202,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l82-jq-GdW" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="qOg-FR-FXf" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-756" y="-1711"/>
+            <point key="canvasLocation" x="-881" y="-1812"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Pkz-wg-shD">
@@ -223,6 +212,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="nrj-76-SK7">
                         <rect key="frame" x="0.0" y="20" width="1112" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -231,7 +221,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eKZ-o6-nTo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1654" y="-2420"/>
+            <point key="canvasLocation" x="-1641" y="-2678"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Xfk-Ff-a1r">
